# MusicScraper

./: .cache  .env.template  .gitignore  CLI.py  README.md  TESTSCRAPE  TESTSTTS.py  backendLauncher.py  dbtest.py  headlessApp.py  pyproject.toml  pyrightconfig.json  testServe.py  todo.md
db/: test.sqlite
src/: application.py  backend.py  database.py  schema.py  spotify.py  utils.py
src/scraping/: albumoftheyear.py  besteveralbums.py  metacritic.py  multiscrapetest.py  rateyourmusic.py  scraper.py  testparser.py  testscraper.py
src/templates/: index.html
static/: styles.css
templates/: albumlist.html  index.html  list.html
